fix-export: Fix `screen` z-index not covering URTable headings

--- a/app/view/netcreate/components/NCNode.css
+++ b/app/view/netcreate/components/NCNode.css
@@ -5,7 +5,7 @@
   right: 0;
   bottom: 0;
   background-color: #0003;
-  z-index: 1;
+  z-index: 9;
 }
 
 .nccomponent {
